<resources>
    <!-- Список городов -->
    <string name="moscow">Moscow</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="tokyo">Tokyo</string>
    <string name="new_york">New York</string>
    <string name="krasnoyarsk">Krasnoyarsk</string>
    <string name="irkutsk">Irkutsk</string>
    <string name="sydney">Sydney</string>
    <string name="berlin">Berlin</string>
    <string name="beijing">Beijing</string>
    <string name="capetown">Сapetown</string>
    <string name="nice">Nice</string>

    <string-array name="name_city">
        <item>@string/moscow</item>
        <item>@string/london</item>
        <item>@string/paris</item>
        <item>@string/tokyo</item>
        <item>@string/new_york</item>
        <item>@string/krasnoyarsk</item>
        <item>@string/irkutsk</item>
        <item>@string/sydney</item>
        <item>@string/berlin</item>
        <item>@string/beijing</item>
        <item>@string/capetown</item>
        <item>@string/nice</item>
    </string-array>

    <!-- Список температур по городам -->
    <integer-array name="id_city">
        <item>524894</item>
        <item>1006984</item>
        <item>2968815</item>
        <item>1850147</item>
        <item>5128638</item>
        <item>1502026</item>
        <item>2023469</item>
        <item>2147714</item>
        <item>2950158</item>
        <item>2038349</item>
        <item>3369157</item>
        <item>5376959</item>
    </integer-array>

    <string name="app_name">MyWeatherApp</string>
    <string name="unit_C">\u2103</string>
    <string name="unit_F">\u2109</string>
    <string name="value">40</string>
    <string name="temperature">Temperature</string>
    <string name="button_choose_city">Сhoose city</string>
    <string name="action_settings">Setting</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="temperature_units">Temperature units</string>
    <string name="actv_search_cites">city search</string>
    <string name="default_name_city">City</string>
    <string name="history">History</string>
    <string name="default_city">Default city</string>
    <string name="error">Error</string>
    <string name="information">Information</string>
    <string name="ok">Ok</string>

    <string name="current_date">current date</string>
    <string name="city">Choice City</string>
    <string name="current_time">current time</string>
    <string name="info">info</string>
    <string name="about">Developer: Starovoytov Sergey</string>
    <string name="faild_search">No such city found</string>
    <string name="no_name">\?</string>
    <string name="dialog_snackbar">\"You choosed \"</string>




    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_cities">cities</string>
    <string name="menu_weather_in_city">Weather in city</string>
    <string name="menu_history">History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add">Add</string >
    <string name="update">Update</string >
    <string name="remove">Remove</string >
    <string name="clear">Clear</string >
    <string name="search">Search</string >

    <string name="menu_tools">Tools</string >
    <string name="menu_share">Share</string >
    <string name="menu_send">Send</string >
    <string name="menu_search">Search</string >

    <string name="home_second">Home Second</string>
    <string name="custom_item_data">Элемент %d</string>


</resources>
