<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="314dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_choice_city"
        app:srcCompat="@drawable/ic_noimages_svg"
        tools:srcCompat="@drawable/ic_noimages_svg" />

    <TextView
        android:id="@+id/tvNameCites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="left"
        android:text="@string/default_name_city"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/tvTemperature"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_date" />

    <TextView
        android:id="@+id/tvUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_C"
        android:textAlignment="textEnd"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameCites"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNameCites" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameCites"
        app:layout_constraintEnd_toStartOf="@+id/tvUnits"
        app:layout_constraintTop_toTopOf="@+id/tvNameCites" />

    <Button
        android:id="@+id/button_choice_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_choose_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button_choose_city" />

    <Button
        android:id="@+id/button_info_city"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/yandex_weather"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tvNameCites"
        app:layout_constraintTop_toBottomOf="@+id/tvNameCites" />

    <TextView
        android:id="@+id/tv_current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_date"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>